fix (#2): add scripts to composer.json for launch script 'load' in container docker with host

--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "load-docker": [
             "docker exec -it php symfony composer run load"
         ],
+        "tests": "docker exec -it php vendor/bin/simple-phpunit",
         "post-install-cmd": [
             "@symfony-scripts"
         ],
