feat (#6): [V3.1] setting config files for tests and add scripts for command to launch tests in composer file

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,4 +26,5 @@ security:
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/users, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/coverage, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: ROLE_USER }
