feat (#24): [V5.4] : Code quality enhancement - Correcting errors of SymfonyInsight - remove bootstrap theme 3 to bootstrap theme 5 and use CDN links - replace favicon with a custom - remove Unit Tests for keep Functional Tests only - get coverage of screenshots V3.1 with Functional Tests only - get coverage of screenshots V5.4 with Functional Tests only - add methods params to all routes in controllers - add end line in readme file - add error custom pages 404 and 500 - add site.webmanifest file

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,6 +11,7 @@
     <php>
         <ini name="display_errors" value="1" />
         <ini name="error_reporting" value="-1" />
+        <server name="KERNEL_CLASS" value="App\Kernel" />
         <server name="APP_ENV" value="test" force="true" />
         <server name="SHELL_VERBOSITY" value="-1" />
         <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
@@ -18,8 +19,8 @@
     </php>
 
     <testsuites>
-        <testsuite name="Project Test Suite">
-            <directory>tests/Controller</directory>
+        <testsuite name="Functional tests">
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
 
